<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">

        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>

        <item
            android:id="@+id/recurringPaymentsFragmentItem"
            android:icon="@drawable/ic_repeat"
            android:title="@string/recurring_payments" />

        <item
            android:id="@+id/profileFragmentItem"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile_header" />


        <item
            android:id="@+id/settingsFragmentItem"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>


</menu>