<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/settingsFragment">

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.financefree.SettingsFragment"
        android:label="@string/settings" />
    <fragment
        android:id="@+id/recurringPaymentsFragment"
        android:name="com.example.financefree.RecurringPaymentsFragment"
        android:label="@string/recurring_payments"
        tools:layout="@layout/recurring_payments_list" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.financefree.Profile"
        android:label="@string/profile_header"
        tools:layout="@layout/fragment_profile" />
</navigation>