<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:textColor="@color/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_margin="@dimen/text_margin"
            android:textSize="@dimen/dialog_text_size"/>

        <TextView
            android:id="@+id/txtNameRPDet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:textSize="@dimen/dialog_subtext_size"/>

        <TextView
            android:textColor="@color/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:layout_margin="@dimen/text_margin"
            android:textSize="@dimen/dialog_text_size"/>

        <TextView
            android:id="@+id/txtNotesRPDet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:textSize="@dimen/dialog_subtext_size"/>

        <TextView
            android:textColor="@color/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bank_account"
            android:layout_margin="@dimen/text_margin"
            android:textSize="@dimen/dialog_text_size"/>

        <TextView
            android:id="@+id/txtBankAccRPDet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:textSize="@dimen/dialog_subtext_size"/>

        <TextView
            android:textColor="@color/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:layout_margin="@dimen/text_margin"
            android:textSize="@dimen/dialog_text_size"/>

        <TextView
            android:id="@+id/txtAmountRPDet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:textSize="@dimen/dialog_subtext_size"/>

        <TextView
            android:textColor="@color/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_date"
            android:layout_margin="@dimen/text_margin"
            android:textSize="@dimen/dialog_text_size"/>

        <TextView
            android:id="@+id/txtStartRPDet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:textSize="@dimen/dialog_subtext_size"/>

        <TextView
            android:textColor="@color/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_date"
            android:layout_margin="@dimen/text_margin"
            android:textSize="@dimen/dialog_text_size"/>

        <TextView
            android:id="@+id/txtEndRPDet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:textSize="@dimen/dialog_subtext_size"/>

        <TextView
            android:textColor="@color/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frequency"
            android:layout_margin="@dimen/text_margin"
            android:textSize="@dimen/dialog_text_size"/>

        <TextView
            android:id="@+id/txtFreqRPDet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:textSize="@dimen/dialog_subtext_size"/>

    </LinearLayout>
</ScrollView>